Release 0714 (#21)
* Creating develop branch

* Only deploy from main

* Add audio context (#2)

* Add contextpath to mp3 source

* trim trailing forwardslash from context mp3

* Testing PR deployment (#4)

* Silent dir clean (#5)

* Log written audio files

* Disable dir clean notification email

* Remove unthrown exception

* Only build .war when deploying app

* switch branch_env to git_branch

* Dev fet pipeline (#8)

* Deploy dev/fet branches

* move context to var for interpolation

* Implement delete job

* Disabling jmx for multi-instance support

* Removed prefix of context for fet environments

* Dev fet pipeline (#9)

* Deploy dev/fet branches

* move context to var for interpolation

* Implement delete job

* Disabling jmx for multi-instance support

* Removed prefix of context for fet environments

* Fixing ref

* Dev fet pipeline (#10)

* Deploy dev/fet branches

* move context to var for interpolation

* Implement delete job

* Disabling jmx for multi-instance support

* Removed prefix of context for fet environments

* Fixing ref

* Fixing ref

* Dev fet pipeline (#11)

* Deploy dev/fet branches

* move context to var for interpolation

* Implement delete job

* Disabling jmx for multi-instance support

* Removed prefix of context for fet environments

* Fixing ref

* Fixing ref

* sudo my guy

* Dev fet pipeline (#12)

* Deploy dev/fet branches

* move context to var for interpolation

* Implement delete job

* Disabling jmx for multi-instance support

* Removed prefix of context for fet environments

* Fixing ref

* Fixing ref

* sudo my guy

* Remove dup spaces set (#7)

* Remove excess spaces from setlist name.

* Generate token link inside object

* Use static server constants in config class

* Add default values for mvn package

* Use change branch if PR

* Account for deployment server IP mapping

* Add tomcat ports to ignored p